# butterfly_eyespot

./: .gitignore  app.py  license  main.ipynb  papayon.txt  pyproject.toml  readme.md
src/: model.py
webapp/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
webapp/src/: App.svelte  app.css  app.scss
webapp/src/lib/: api.ts  stores.ts
webapp/src/lib/Button/: Button.scss  Button.svelte
webapp/src/lib/Controles/: Controles.svelte
webapp/src/lib/Grid/: Grid.svelte  GridCanvas.svelte  GridSolution.svelte  Square.svelte
webapp/src/lib/Input/: Input.scss  Input.svelte
webapp/src/lib/Toast/: Toast.scss  Toast.svelte  toast.type.ts
webapp/src/scss/: _colors.scss  _fonts.scss  _mixins.scss  _reset.scss
webapp/src/types/: Camera.type.ts  Parameters.type.ts  Solution.type.ts  Square.type.ts
