[tool.poetry]
name = "maths-project"
version = "0.1.0"
description = ""
authors = ["Evann DREUMONT <53308142+LeGmask@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "maths_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
scipy = "^1.9.2"
ipympl = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
