[tool.poetry]
name = "maths-project"
version = "0.1.0"
description = ""
authors = ["Evann DREUMONT <53308142+LeGmask@users.noreply.github.com>", "Marion ROSEC"]
license = "MIT"
readme = "readme.md"
packages = [{include = "maths_project"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
scipy = "^1.9.2"
ipympl = "^0.9.2"
jupyterlab = "^3.5.0"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"